fix: corrects stats on home page spacing

--- a/src/utils/stat/stat.scss
+++ b/src/utils/stat/stat.scss
@@ -6,6 +6,8 @@
   justify-content: center;
   align-items: center;
   position: relative;
+  margin-left: 17.5px;
+  margin-right: 17.5px;
 
   .stat-content {
     display: flex;
